--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -15,16 +15,16 @@
             <div class = "navigation">
                 <div id="logo">Header Logo</div>
                 <ul>
-                    <li><a href="#" >header link one</a></li>
-                    <li><a href="#" >header link one</a></li>
-                    <li><a href="#" >header link one</a></li>
+                    <li><a href="#" >header link 1</a></li>
+                    <li><a href="#" >header link 2</a></li>
+                    <li><a href="#" >header link 3</a></li>
                 </ul>
             </div>
-            <div class = "hero">
+            <div class = "navi">
                 <div class = "description">
                     <div id = "hero-title">This website is awesome</div>
                     <div id = "hero-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                    <button class = "signUpButton">Sign up</button>
+                    <button class = "signUpBtn">Sign up</button>
                 </div>
                 <div id="hero-image">This is a placeholder for an image</div>
             </div>
@@ -61,11 +61,11 @@
     
         <div class="cta-section">
             <div class="cta-container">
-                <div class = "cla">
+                <div class = "ctaBox">
                     <div class="cta">Call to action! It's time!</div>
                     <div class="cta-description">Sign up for our product by clicking that button right over there</div>
                 </div>
-                <button class="signUpButton">Sign Up</button>
+                <button class="signUpBtn">Sign Up</button>
             </div>
         </div>
     
