--- a/jspractice/jsfunctions.html
+++ b/jspractice/jsfunctions.html
@@ -6,7 +6,12 @@
     <title>JS practice</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
-<p>testing with js scripts</p>
+    <script>
+        function add7(num) {
+    return num + 7;
+  }
+  console.log("add7(3):", add7(3));
+    </script>
+    <p>js function practice</p>
 </body>
 </html>
