--- a/rps-game/index.html
+++ b/rps-game/index.html
@@ -22,7 +22,7 @@
 
   <div class="score">
     <p>Player: <span id="player-score">0</span></p>
-    <p>Computer: <span id="computer-score">0</span></p>
+    <p>CPU: <span id="computer-score">0</span></p>
   </div>
 
   <div class="result">
