--- a/jspractice/arraysandloops/index.html
+++ b/jspractice/arraysandloops/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>bubble creator</title>
 </head>
 <body>
-    <button>Update</button> <Canvas></Canvas>    
+    <button>Create!</button> <Canvas></Canvas>    
     <script src="script.js"></script>
 </body>
 </html>
