--- a/jspractice/domManipulation.html
+++ b/jspractice/domManipulation.html
@@ -6,6 +6,26 @@
     <title>DOM manipulation</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="display"></div>
+        <div class="controls"></div>
+      </div>
+ <script>
+    // selects the #container div (don't worry about the syntax, we'll get there)
+        const container = document.querySelector("#container");
+
+// selects the first child of #container => .display
+        const display = container.firstElementChild;
+        console.log(display);  // <div class="display"></div>
+
+// selects the .controls div
+        const controls = document.querySelector(".controls");
+
+// selects the prior sibling => .display
+        const display = controls.previousElementSibling;
+        console.log(display); // <div class="display"></div>
+
+
+ </script>     
 </body>
 </html>
