--- a/jspractice/domManipulation.html
+++ b/jspractice/domManipulation.html
@@ -1,61 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM manipulation</title>
-</head>
-<body>
-    <div id="container">
-        <div class="display"></div>
-        <div class="controls"></div>
-      </div>
- <script>
-    // selects the #container div (don't worry about the syntax, we'll get there)
-        const container = document.querySelector("#container");
-
-// selects the first child of #container => .display
-        const display = container.firstElementChild;
-        console.log(display);  // <div class="display"></div>
-
-// selects the .controls div
-        const controls = document.querySelector(".controls");
-
-// selects the prior sibling => .display
-        const display = controls.previousElementSibling;
-        console.log(display); // <div class="display"></div>
-
-//dom methods
-// adds the indicated style rule to the element in the div variable
-        div.style.color = "blue";
-
-// adds several style rules
-        div.style.cssText = "color: blue; background: white;";
-
-// adds several style rules
-        div.setAttribute("style", "color: blue; background: white;");
-// dot notation with kebab case: doesn't work as it attempts to subtract color from div.style.background
-// equivalent to: div.style.background - color
-        div.style.background-color;
-
-// dot notation with camelCase: works, accesses the div's background-color style
-        div.style.backgroundColor;
-
-// bracket notation with kebab-case: also works
-        div.style["background-color"];
-
-// bracket notation with camelCase: also works
-        div.style["backgroundColor"];
-// if id exists, update it to 'theDiv', else create an id with value "theDiv"
-        div.setAttribute("id", "theDiv");
-
-// returns value of specified attribute, in this case "theDiv"
-        div.getAttribute("id");
-
-// removes specified attribute
-        div.removeAttribute("id");
-
-
- </script>     
-</body>
+    <title>Simple DOM example</title>
+  </head>
+  <body>
+      <section>
+        <img src="dinosaur.png" alt="A red Tyrannosaurus Rex: A two legged dinosaur standing upright like a human, with small arms, and a large head with lots of sharp teeth.">
+        <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
+      </section>
+  </body>
 </html>
