dom manipulation assignment

--- a/jspractice/domManipulation.html
+++ b/jspractice/domManipulation.html
@@ -32,6 +32,14 @@
         const linkPara = document.querySelector("p");
         linkPara.appendChild(text);
 
+        sect.appendChild(linkPara);
+
+        sect.removeChild(linkPara);
+
+        linkPara.remove();
+
+        linkPara.parentNode.removeChild(linkPara);
+
       </script>
 
   </body>
