--- a/jspractice/domManipulation.html
+++ b/jspractice/domManipulation.html
@@ -36,9 +36,14 @@
 
         sect.removeChild(linkPara);
 
-        linkPara.remove();
+        //linkPara.parentNode.removeChild(linkPara);
 
-        linkPara.parentNode.removeChild(linkPara);
+        para.style.color = "white";
+        para.style.backgroundColor = "black";
+        para.style.padding = "10px";
+        para.style.width = "250px";
+        para.style.textAlign = "center";
+
 
       </script>
 
