--- a/jspractice/domManipulation.html
+++ b/jspractice/domManipulation.html
@@ -39,7 +39,7 @@
         //linkPara.parentNode.removeChild(linkPara);
 
         para.style.color = "white";
-        para.style.backgroundColor = "black";
+        para.style.backgroundColor = "orange";
         para.style.padding = "10px";
         para.style.width = "250px";
         para.style.textAlign = "center";
