--- a/jspractice/domManipulation.html
+++ b/jspractice/domManipulation.html
@@ -36,7 +36,7 @@
 
         sect.removeChild(linkPara);
 
-        //linkPara.parentNode.removeChild(linkPara);
+        linkPara.parentNode.removeChild(linkPara);
 
         para.style.color = "white";
         para.style.backgroundColor = "orange";
