--- a/etchasketch/index.html
+++ b/etchasketch/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="board.png">
 </head>
 <body>
-    
+    <button id="newPad">New/Clear</button>
+    <div id="container"></div>
+
+
+    <script src="script.js"></script>
+
 </body>
 </html>
