--- a/etchasketch/index.html
+++ b/etchasketch/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="board.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">   
 </head>
 <body>
-    <button id="newPad">New/Clear</button>
+    
     <div id="container"></div>
-
+    <button id="newPad">New/Clear</button>
 
     <script src="script.js"></script>
 
