--- a/etchasketch/index.html
+++ b/etchasketch/index.html
@@ -10,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">   
 </head>
 <body>
-  
+    <div id="container"></div>
+    <button id="newGrid">New</button>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
