--- a/etchasketch/index.html
+++ b/etchasketch/index.html
@@ -3,16 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch a Sketch</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">   
 </head>
 <body>
-    <div id="container"></div>
-    <button id="newGrid">New</button>
+    <div id="container">
+        <h1>Etch A Sketch</h1>
+        <div id="grid-container">
+        </div>
+    
+        <div id="function-container">
+            <div id="size-setting" class="button-container">
+            <input type="text" id="size-input" placeholder="Enter number 4 - 100"/>
+            <button id="size-button">Grid Size</button>
+            </div>
+            
+            <div id="mode-selector" class="button-container">
+                <button id="pen-button">Pen Mode</button>
+                <button id="eraser-button">Eraser Mode</button>
+            </div>
 
+            <div id="clear-all-container" class="button-container">
+                <button id="clear-button">Clear All</button>
+            </div>
+        </div>
+
+        <div id="color-selector-container">
+            <button id="red-color" class="round-button" title="red"></button>
+            <button id="blue-color" class="round-button" title="blue"></button>
+            <button id="green-color" class="round-button" title="green"></button>
+            <button id="black-color" class="round-button" title="black"></button>
+            <button id="random-color" class="round-button" title="random color"></button>
+        </div>
+
+    </div>
     <script src="script.js"></script>
 
 </body>
