--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -26,7 +26,7 @@
                     <div id = "hero-description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                     <button class = "signUpBtn">Sign up</button>
                 </div>
-                <div id="hero-image">This is a placeholder for an image</div>
+                <div id="hero-image">Placeholder for an image</div>
             </div>
         </div>
     
